--- a/poc/src/main/resources/cassandra.conf
+++ b/poc/src/main/resources/cassandra.conf
@@ -1,28 +1,34 @@
 akka {
   persistence {
+
     journal-plugin-fallback {
         recovery-event-timeout = 30s
     }
 
     journal {
-      plugin = "cassandra-journal"
+      plugin = "akka.persistence.cassandra.journal"
       include "event-adapters.conf"
-
     }
     snapshot-store {
-      plugin = "cassandra-snapshot-store"
+      plugin = "akka.persistence.cassandra.snapshot"
     }
   }
 }
 
-cassandra-journal {
-  contact-points = ["0.0.0.0:9042"]
-  contact-points = ${?CASSANDRA_CONTACT_POINTS}
-  replication = 1
-  replication = ${?CASSANDRA_REPLICAS}
+datastax-java-driver {
+  basic.contact-points = ["0.0.0.0:9042"]
+  basic.contact-points = ${?CASSANDRA_CONTACT_POINTS}
+  basic.load-balancing-policy.local-datacenter = datacenter1
 }
 
-cassandra-snapshot-store {
-  contact-points = ["0.0.0.0:9042"]
-  contact-points = ${?CASSANDRA_CONTACT_POINTS}
+
+akka.persistence.cassandra {
+ journal {
+   replication-factor = 1
+   replication-factor = ${?CASSANDRA_REPLICAS}
+ }
+ snapshot {
+    replication-factor = 1
+    replication-factor = ${?CASSANDRA_REPLICAS}
+ }
 }
