--- a/poc/src/main/resources/akka.conf
+++ b/poc/src/main/resources/akka.conf
@@ -4,9 +4,11 @@ include "akka/cluster.conf"
 include "akka/remote.conf"
 include "akka/managment.conf"
 include "akka/actor.conf"
+include "akka/test.conf"
 
 akka {
   coordinated-shutdown.exit-jvm = on
+
   io.dns.resolver = async-dns
 }
 
