--- a/poc/src/main/resources/akka/cluster.conf
+++ b/poc/src/main/resources/akka/cluster.conf
@@ -16,7 +16,8 @@ akka {
     }
 
     auto-discovery = off
-    seed-nodes = ["akka://ExampleSystem@0.0.0.0:2551"]
+    seed-nodes = []
+    seed-nodes = [${?SEED_NODES}]
     shutdown-after-unsuccessful-join-seed-nodes = 30s
   }
 
