--- a/poc/src/main/resources/application.conf
+++ b/poc/src/main/resources/application.conf
@@ -4,3 +4,9 @@ include "event-adapters.conf"
 include "clustering.conf"
 include "akka.conf"
 
+kamon {
+  environment.service = "Example Service"
+  apm.api-key = "3405691582ddg937pvte03ckr4"
+}
+logback=0.0.0.0
+logback=${?LOGSTASH}
